--- a/src/app/components/processroles/processroletree/processroletree.component.html
+++ b/src/app/components/processroles/processroletree/processroletree.component.html
@@ -3,7 +3,7 @@
 
 <div class="row col-12" style="margin: 0 -27px;">
     <div class="col-12">
-        <app-addprocessrole></app-addprocessrole>
+        <app-addprocessrole [RoleRow]="ROLEROW" #myParentID ></app-addprocessrole>
     </div>
 
     <div class="col-4">
