--- a/src/app/components/processroles/addmember/addmember.component.html
+++ b/src/app/components/processroles/addmember/addmember.component.html
@@ -4,15 +4,101 @@
   
   <div class="modal fade" id="MemberProcessRole" tabindex="-1" role="dialog" aria-labelledby="MemberProcessRoleLabel" aria-hidden="true">
     <div class="modal-dialog modal-xl" role="document">
+    <form>
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="MemberProcessRoleLabel">Add Member Process Role</h5>
+          <h6 class="modal-title" id="MemberProcessRoleLabel">Add Member Process Role</h6>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
         <div class="modal-body">
-          ...
+          
+          <p-table #dt2 [value]="customers" dataKey="id" [rows]="5" [showCurrentPageReport]="true" sortMode="multiple"
+           [rowsPerPageOptions]="[5,10,25,50]" [loading]="loading" [rowHover]="true" styleClass="p-datatable-sm  p-datatable-striped p-datatable-gridlines p-datatable-customers"
+           [paginator]="true"  currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
+           [globalFilterFields]="['MEMBER_TYPE','MEMBER_NAME']"   [(selection)]="selectedRows"   selectionMode="multiple" >
+          <!-- <ng-template pTemplate="caption">
+            <div class="p-d-flex">
+              <span class="p-input-icon-left p-ml-auto">
+                        <i class="pi pi-search"></i>
+                        <input pInputText type="text"  ngModel #inVal2="ngModel" (input)="dt2.filterGlobal(inVal2.value, 'contains')" placeholder="Search keyword" />
+                </span>
+            </div>
+          </ng-template> -->
+
+ 
+
+          <ng-template pTemplate="header">
+
+            <tr>
+              <th style="width:5px !important">
+                <p-tableHeaderCheckbox style="margin-left: 5px;"></p-tableHeaderCheckbox>
+
+             </th>
+              <th pSortableColumn="MEMBER_ID">
+                <div class="p-d-flex p-jc-between p-ai-center">
+                  MemberID <p-sortIcon field="MEMBER_ID"></p-sortIcon>
+                </div>
+              </th>
+              <th pSortableColumn="MEMBER_NAME">
+                <div class="p-d-flex p-jc-between p-ai-center">
+                  MemberName <p-sortIcon field="MEMBER_NAME"></p-sortIcon>
+                </div>
+              </th>
+              <th pSortableColumn="MEMBER_TYPE">
+                <div class="p-d-flex p-jc-between p-ai-center">
+                  Member Type <p-sortIcon field="MEMBER_TYPE"></p-sortIcon>
+                </div>
+              </th>
+            </tr>
+
+            <tr >
+              <th></th>
+              <th>
+                <p-columnFilter type="text" field="MEMBER_ID" ></p-columnFilter>
+              </th>
+            
+              <th>
+                <p-columnFilter type="text" field="MEMBER_NAME"></p-columnFilter>
+              </th>
+
+              <th>
+                <p-columnFilter type="text" field="MEMBER_TYPE"></p-columnFilter>	
+                <p-columnFilter  field="MEMBER_TYPE" matchMode="equals" [showMenu]="false">
+                  <ng-template pTemplate="filter" let-value let-filter="filterCallback">
+                    <p-dropdown  [ngModel]="value" [options]="statuses" (onChange)="filter($event.value)" placeholder="Any" [showClear]="true">
+                      <ng-template let-option pTemplate="item">
+                        <span [class]="'customer-badge status-' + option.value">{{option.label}}</span>
+                      </ng-template>
+                    </p-dropdown>
+                  </ng-template>
+                </p-columnFilter>
+              </th>
+            </tr>
+          </ng-template>
+
+          <ng-template pTemplate="body" let-customer let-rowIndex="rowIndex">
+
+              <tr  [pSelectableRow]="customer" [pSelectableRowIndex]="rowIndex" >
+              <td>
+                <!-- <p-checkbox [value]="customer"  (click)="selectRow(customer)" ></p-checkbox> -->
+                <p-tableCheckbox [value]="customer" (click)="selectRow(customer)"  ></p-tableCheckbox> 
+             </td>
+               <td>{{customer.MEMBER_ID}}</td>
+               <td>{{customer.MEMBER_NAME}}</td>
+               <td>{{customer.MEMBER_TYPE}} </td>
+            </tr>
+          </ng-template>
+          <ng-template pTemplate="emptymessage">
+            <tr>
+              <td colspan="5">No Date found.</td>
+            </tr>
+          </ng-template>
+        </p-table> 
+
+
+
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-success">Ok</button>
@@ -20,5 +106,7 @@
 
         </div>
       </div>
+
+    </form>
     </div>
   </div>
