--- a/src/app/components/processroles/addmember/addmember.component.html
+++ b/src/app/components/processroles/addmember/addmember.component.html
@@ -1,10 +1,10 @@
-<button type="button" class="btn btn-success mb-1" data-toggle="modal" data-target="#MemberProcessRole">
+<button type="button" class="btn btn-success mb-1" data-toggle="modal" data-target="#MemberProcessRole" (click)=getAllMember()>
     <i class="fa fa-plus"></i>  Add Member 
 </button>
   
-  <div class="modal fade" id="MemberProcessRole" tabindex="-1" role="dialog" aria-labelledby="MemberProcessRoleLabel" aria-hidden="true">
+  <div class="modal fade" id="MemberProcessRole" tabindex="-1" role="dialog" aria-labelledby="MemberProcessRoleLabel" aria-hidden="true" data-backdrop="static" data-keyboard="false">
     <div class="modal-dialog modal-xl" role="document">
-    <form>
+      <form #f="ngForm" (ngSubmit)="SubmitAddMembers(f.value)" >
       <div class="modal-content">
         <div class="modal-header">
           <h6 class="modal-title" id="MemberProcessRoleLabel">Add Member Process Role</h6>
@@ -13,11 +13,12 @@
           </button>
         </div>
         <div class="modal-body">
-          
-          <p-table #dt2 [value]="customers" dataKey="id" [rows]="5" [showCurrentPageReport]="true" sortMode="multiple"
+       
+          <p-table #dt2 [value]="customers"  [rows]="5" [showCurrentPageReport]="true" sortMode="multiple"
            [rowsPerPageOptions]="[5,10,25,50]" [loading]="loading" [rowHover]="true" styleClass="p-datatable-sm  p-datatable-striped p-datatable-gridlines p-datatable-customers"
            [paginator]="true"  currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
-           [globalFilterFields]="['MEMBER_TYPE','MEMBER_NAME']"   [(selection)]="selectedRows"   selectionMode="multiple" >
+           [globalFilterFields]="['MEMBER_TYPE','MEMBER_NAME' ,'MEMBER_ID']"  [metaKeySelection]="true"  responsiveLayout="scroll" 
+           selectionMode="multiple"  [(selection)]="selectedProducts"  dataKey="MEMBER_ID" >
           <!-- <ng-template pTemplate="caption">
             <div class="p-d-flex">
               <span class="p-input-icon-left p-ml-auto">
@@ -32,10 +33,10 @@
           <ng-template pTemplate="header">
 
             <tr>
-              <th style="width:5px !important">
-                <p-tableHeaderCheckbox style="margin-left: 5px;"></p-tableHeaderCheckbox>
-
-             </th>
+              <th style="width: 3rem">
+                <p-tableHeaderCheckbox></p-tableHeaderCheckbox>
+            </th>
+         
               <th pSortableColumn="MEMBER_ID">
                 <div class="p-d-flex p-jc-between p-ai-center">
                   MemberID <p-sortIcon field="MEMBER_ID"></p-sortIcon>
@@ -51,6 +52,8 @@
                   Member Type <p-sortIcon field="MEMBER_TYPE"></p-sortIcon>
                 </div>
               </th>
+
+           
             </tr>
 
             <tr >
@@ -64,10 +67,10 @@
               </th>
 
               <th>
-                <p-columnFilter type="text" field="MEMBER_TYPE"></p-columnFilter>	
+                <!-- <p-columnFilter type="text" field="MEMBER_TYPE"></p-columnFilter>	 -->
                 <p-columnFilter  field="MEMBER_TYPE" matchMode="equals" [showMenu]="false">
                   <ng-template pTemplate="filter" let-value let-filter="filterCallback">
-                    <p-dropdown  [ngModel]="value" [options]="statuses" (onChange)="filter($event.value)" placeholder="Any" [showClear]="true">
+                    <p-dropdown  [ngModel]="value" [options]="statuses"   [ngModelOptions]="{standalone: true}" (onChange)="filter($event.value)" placeholder="Any" [showClear]="true">
                       <ng-template let-option pTemplate="item">
                         <span [class]="'customer-badge status-' + option.value">{{option.label}}</span>
                       </ng-template>
@@ -75,15 +78,16 @@
                   </ng-template>
                 </p-columnFilter>
               </th>
+             
             </tr>
           </ng-template>
 
           <ng-template pTemplate="body" let-customer let-rowIndex="rowIndex">
 
-              <tr  [pSelectableRow]="customer" [pSelectableRowIndex]="rowIndex" >
+              <tr >
               <td>
-                <!-- <p-checkbox [value]="customer"  (click)="selectRow(customer)" ></p-checkbox> -->
-                <p-tableCheckbox [value]="customer" (click)="selectRow(customer)"  ></p-tableCheckbox> 
+                <p-tableCheckbox [value]="customer"  (click)="selectRow(customer)" ></p-tableCheckbox>
+                <!-- <p-checkbox name="groupname" [value]="customer" [binary]="true" [(ngModel)]="selectedItems"  (click)="selectRow(customer)" ></p-checkbox> -->
              </td>
                <td>{{customer.MEMBER_ID}}</td>
                <td>{{customer.MEMBER_NAME}}</td>
@@ -97,12 +101,10 @@
           </ng-template>
         </p-table> 
 
-
-
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-success">Ok</button>
-          <button type="button" class="btn btn-danger" data-dismiss="modal">Cancel</button>
+          <button type="submit" class="btn btn-success">Ok</button>
+          <button type="button" class="btn btn-danger"  data-dismiss="modal">Cancel</button>
 
         </div>
       </div>
@@ -110,3 +112,4 @@
     </form>
     </div>
   </div>
+  
