--- a/src/app/components/processroles/addprocessrole/addprocessrole.component.html
+++ b/src/app/components/processroles/addprocessrole/addprocessrole.component.html
@@ -2,13 +2,13 @@
     <i class="fa fa-plus"></i>  New Process Role 
 </button>
   
-  <div class="modal fade" id="ProcessRole" tabindex="-1" role="dialog" aria-labelledby="ProcessRoleLabel" aria-hidden="true">
+  <div class="modal fade" id="ProcessRole" tabindex="-1" role="dialog" aria-labelledby="ProcessRoleLabel" aria-hidden="true" data-backdrop="static" data-keyboard="false">
     <div class="modal-dialog modal-xl" role="document">
-      <form #f="ngForm" (ngSubmit)="onClickSubmit(f.value)" >
+      <form #f="ngForm" (ngSubmit)="onClickSubmit(f.value)">
       <div class="modal-content">
         <div class="modal-header">
           <h6 class="modal-title" id="ProcessRoleLabel">{{title}}</h6>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close" (click)="reset(f)">
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
@@ -31,8 +31,11 @@
             <div class="form-group row">
                 <label for="ROLE_NAME" class="col-sm-2 col-form-label">Role Name * </label>
                 <div class="col-sm-10  input-group-sm">
-                    <input type="text"  class="form-control"  name="ROLE_NAME" [(ngModel)]="ROLE_NAME"  required    />      
-                </div>
+                    <input type="text"  class="form-control"  name="ROLE_NAME" [(ngModel)]="ROLE_NAME" 
+                    #RNAME ="ngModel"  required />  
+                    <p  class="text-danger mt-1" *ngIf="RNAME.errors?.required && RNAME.touched ">ROLE NAME is required.</p>
+                  </div>
+                
             </div>
         
             <div class="form-group row">
@@ -46,7 +49,7 @@
         </div>
         <div class="modal-footer">
           <button type="submit" class="btn btn-success"  [disabled]=f.form.invalid >Save</button>
-          <button type="button" class="btn btn-danger" data-dismiss="modal">Cancel</button>
+          <button type="button" class="btn btn-danger" (click)="reset(f)" data-dismiss="modal">Cancel</button>
        </div>
       </div>
     </form>
