--- a/src/app/components/processroles/processroledetails/processroledetails.component.html
+++ b/src/app/components/processroles/processroledetails/processroledetails.component.html
@@ -1,6 +1,10 @@
 
-<form >
-    <div class="form-group row" style="visibility: hidden;height: 0;">
+<form  #f="ngForm" (ngSubmit)="UpdateSubmit(f.value)"  style="margin-top: -33px;">
+	<div style="text-align: end;">		
+		<button type="submit" class="btn btn-success btn-sm mb-1 mr-1 "  [disabled]=f.form.invalid > <i class="fa fa-save" ></i> Save</button>
+		<button type="button" class="btn btn-danger btn-sm mb-1" (click)="reset()" data-dismiss="modal"> <i class="fa fa-times" ></i> Cancel</button>
+	</div>
+	<div class="form-group row" style="visibility: hidden;height: 0;">
         <label for="ROLE_ID" class="col-sm-2 col-form-label">ROLE ID :</label>
         <div class="col-sm-10  input-group-sm">
             <input type="text"  class="form-control" name="ROLE_ID" [(ngModel)]="ROLE_ID"   required    />      
@@ -10,8 +14,11 @@
     <div class="form-group row">
         <label for="ROLE_NAME" class="col-sm-2 col-form-label">RoleName* </label>
         <div class="col-sm-10  input-group-sm">
-            <input type="text"  class="form-control"  name="ROLE_NAME"  [(ngModel)]="ROLE_NAME"   required    />      
+            <input type="text"  class="form-control"  name="ROLE_NAME"  [(ngModel)]="ROLE_NAME" #RNAME ="ngModel"   required    />      
+			<p  class="text-danger mt-1" *ngIf="RNAME.errors?.required && RNAME.touched ">ROLE NAME is required.</p>
         </div>
+
+	
     </div>
 
     <div class="form-group row">
@@ -21,18 +28,22 @@
              name="DESCRIPTION"  [(ngModel)]="DESCRIPTION"></textarea>
         </div>
     </div>
+
+	
 </form>
  
 
 <br>
 <!--Table Member-->
-<p-table #dt1 [value]="Members" dataKey="id" [rows]="5" [showCurrentPageReport]="true"  sortMode="multiple"
+<p-table #dt1 [value]="Members" dataKey="id" [rows]="10" [showCurrentPageReport]="true"  sortMode="multiple"
 	[rowsPerPageOptions]="[5,10,25,50]" [loading]="loading" styleClass="p-datatable-sm  p-datatable-striped p-datatable-Members p-datatable-gridlines"
 	[paginator]="true" currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
 	[globalFilterFields]="['MEMBER_TYPE','MEMBER_NAME']">
 	
     <ng-template pTemplate="caption">
-		<app-addmember style="float: right;"></app-addmember>
+	<!-- Add Member -->
+		<app-addmember style="float: right;"  #AddChild ></app-addmember>
+
 		<div class="p-d-flex">
 			<span class="p-input-icon-left p-ml-auto">
                 <i class="pi pi-search"></i> 
