--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -23,13 +23,28 @@
         </a>
         </li>
 
-        <li >
-            <a  routerLink="dashboard"  title="Home ">
-                <span class="fa fa-home  icon-navbar" ></span>
-                <span> Test Page </span>
-            </a>
-            </li>
+      
 
+            <li>
+                <a routerLink="businessObject" title="Home ">
+                    <span class="fa fa-home  icon-navbar"></span>
+                    <span> Business Object </span>
+                </a>
+            </li>
+            
+            <li>
+                <a routerLink="objectAttribute" title="Home ">
+                    <span class="fa fa-home  icon-navbar"></span>
+                    <span> Object Attribute </span>
+                </a>
+            </li>
+    
+            <!-- <li >
+                <a  routerLink="dashboard"  title="Home ">
+                    <span class="fa fa-home  icon-navbar" ></span>
+                    <span> Test Page </span>
+                </a>
+                </li> -->
         <!-- <li> 
             <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
                 <span class="fa fa-home  icon-navbar" ></span>
